Change Points to Point, Change Preferences to Preference, change Weight attribute name

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -37,6 +37,10 @@
                         &#xA0;<span translate="global.menu.entities.bloodPressure">bloodPressure</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="preferences" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.preferences">preferences</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="point" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.point">point</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="preference" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.preference">preference</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
