--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -29,14 +29,10 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li ui-sref-active="active" ><a ui-sref="points" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span translate="global.menu.entities.points">points</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="weight" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.weight">weight</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="bloodPressure" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.bloodPressure">bloodPressure</span></a></li>
-                        <li ui-sref-active="active" ><a ui-sref="preferences" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span translate="global.menu.entities.preferences">preferences</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="point" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.point">point</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="preference" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
@@ -94,7 +90,7 @@
                             &#xA0;<span translate="global.menu.admin.apidocs">API</span></a></li>
                     </ul>
                 </li>
-                <li ui-sref-active="active" uib-dropdown ng-controller="LanguageController">
+                <!--<li ui-sref-active="active" uib-dropdown ng-controller="LanguageController">
                     <a uib-dropdown-toggle href="">
                         <span>
                             <span class="glyphicon glyphicon-flag"></span>
@@ -105,7 +101,7 @@
                     <ul class="dropdown-menu">
                         <li active-menu="{{language}}" ng-repeat="language in languages">
                             <a href="" ng-click="changeLanguage(language)" data-toggle="collapse" data-target=".navbar-collapse.in">{{language | findLanguageFromKey}}</a>
-                        </li>
+                        </li>-->
                     </ul>
                 </li>
             </ul>
